# hag-after-midnight-first-test

./: .debtmark-baseline.json  .gitignore  CHANGELOG.md  LICENSE  NIGHTLOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: release.yml  test.yml
.hag/: new-repo-request.md  plan.md
src/debtmark/: __init__.py  baseline.py  cli.py  config.py  core.py  report.py
tests/: test_cli.py  test_integration.py
