[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "debtmark"
version = "0.7.6"
description = "Find the promises your codebase has stopped noticing."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "HAG"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
keywords = ["technical-debt", "todo", "static-analysis", "cli"]

[project.urls]
Homepage = "https://github.com/KJ5IRQ/hag-after-midnight"
Repository = "https://github.com/KJ5IRQ/hag-after-midnight"
Issues = "https://github.com/KJ5IRQ/hag-after-midnight/issues"

[project.scripts]
debtmark = "debtmark.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
